--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -18,4 +18,5 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Run Tests
-        run: Tests\RunTests.ps1
+        run: |
+          . (Join-Path "." "Tests/RunTests.ps1")
