--- a/Actions/RunPipeline/action.yaml
+++ b/Actions/RunPipeline/action.yaml
@@ -30,7 +30,7 @@ inputs:
     required: false
     default: '{"insiderSasToken":"","licenseFileUrl":"","CodeSignCertificateUrl":"","CodeSignCertificatePw":"","KeyVaultCertificateUrl":"","KeyVaultCertificatePw":"","KeyVaultClientId":"","applicationInsightsConnectionString": ""}'
   buildMode:
-    description: Specifies a mode to use for the build steps. Default mode builds the code as is.
+    description: Specifies a mode to use for the build steps
     required: false
     default: 'Default'
 runs:
