--- a/.github/workflows/E2E.yaml
+++ b/.github/workflows/E2E.yaml
@@ -120,7 +120,7 @@ jobs:
 
   Scenario:
     runs-on: [ ubuntu-latest ]
-    needs: [ Check, SetupRepositories ]
+    needs: [ Check, SetupRepositories, Analyze ]
     strategy:
       matrix:
         scenario: ${{ fromJson(needs.Analyze.outputs.scenarios) }}
