--- a/.github/workflows/E2E.yaml
+++ b/.github/workflows/E2E.yaml
@@ -109,14 +109,14 @@ jobs:
           Add-Content -Path $env:GITHUB_OUTPUT -Value "releasesCount=$($releases.Count)"
           Write-Host "releasesCount=$($releases.Count)"
           $scenarios = @(Get-ChildItem -path (Join-Path $ENV:GITHUB_WORKSPACE "e2eTests/scenarios/*/runtest.ps1") | ForEach-Object { $_.Directory.Name })
-          if ($scenarios.Count -le 1) {
-            Add-Content -Path $env:GITHUB_OUTPUT -Value "scenarios=[$($scenarios)]"
-            Write-Host "scenarios=[$($scenarios)]"
+          if ($scenarios.Count -eq 1) {
+            $scenariosJSon = "[$($scenarios | ConvertTo-Json -compress)]"
           }
           else {
-            Add-Content -Path $env:GITHUB_OUTPUT -Value "scenarios=$($scenarios -join ',')"
-            Write-Host "scenarios=$($scenarios -join ',')"
+            $scenariosJSon = $scenarios | ConvertTo-Json -compress
           }
+          Add-Content -Path $env:GITHUB_OUTPUT -Value "scenarios=$scenariosJson"
+          Write-Host "scenarios=$scenariosJson"
 
   Scenario:
     runs-on: [ ubuntu-latest ]
@@ -213,7 +213,7 @@ jobs:
 
   RemoveRepositories:
     runs-on: [ ubuntu-latest ]
-    needs: [ Check, SetupRepositories, TestAlGo, TestAlGoUpgrade ]
+    needs: [ Check, SetupRepositories, TestAlGo, TestAlGoUpgrade, Scenario ]
     if: always() && (${{ needs.SetupRepositories.result == 'Success' }})
     steps:
       - uses: actions/checkout@v3
